# excel-spec-tool

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.ja.md  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: annotators.py  cell_text_plan.py  dependencies.py  llm_client.py  llm_tools.py  logging_config.py  main.py  storage.py
backend/routes/: analyze.py  cells.py  change_request.py  chat.py  diagnosis.py  diagrams.py  diff.py  external_functions.py  extract.py  feedback.py  jobs.py  refactor.py  references.py  spec.py  system.py  vba_change.py  workbook.py
core/: change_record.py  change_request.py  diagnosis.py  diagrams.py  exceptions.py  formula_fix.py  models.py  mutation.py  named_range_fix.py  officecli_provider.py  openpyxl_utils.py  reference_index.py  risk_analyzer.py  spec_generator.py  vba_change.py  vba_package.py  verification.py  workbook_diff.py
core/external_functions/: __init__.py  bloomberg.py  registry.py
core/extractors/: cells.py  vba.py  workbook.py
deploy/: nginx-path-split.conf
docs/: OSS_LAUNCH_PLAN.md  SPEC.ja.md  VISION.ja.md  architecture.md  s2_demand_survey.ja.md
docs/adr/: 0001-mutation-provider-verification-gate.md
docs/fixtures/: s2_demand_survey_template.csv
frontend/: .env.example  README.md  _sidebar.py  app.py  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/assets/css/: main.css
frontend/components/: AnalyzeProgress.vue  AppBackendStatus.vue  AppSidebar.vue  CellTextEditCard.vue  ChatMarkdown.vue  ChatMessageBubble.vue  ChatQuestionTemplates.vue  DeleteJobDialog.vue  DiagramView.vue  DiagramsPanel.vue  ExternalFunctionsExplorer.vue  FeedbackFab.vue  FeedbackModal.vue  FileDropzone.vue  FormulaFixCard.vue  JobCard.vue  JobStatusBadge.vue  LlmOnboardingCard.vue  NamedRangeFixCard.vue  ReferenceSearch.vue  SheetExplorer.vue  SpecInsightDashboard.vue  SpecMetrics.vue  SpecNode.vue  SpecOverview.vue  SpecSkeleton.vue  ToolTraceList.vue  VbaChangePackageCard.vue  VbaExplorer.vue  VerificationGateAlert.vue  WorkbookDiagnosisView.vue  WorkbookDiffView.vue
frontend/composables/: useBackend.ts  useDiagramLayout.ts  useFriendlyError.ts
frontend/layouts/: default.vue
frontend/pages/: 1_upload.py  2_spec.py  3_chat.py  diff.vue  index.vue
frontend/pages/change/: [jobId].vue
frontend/pages/chat/: [jobId].vue
frontend/pages/spec/: [jobId].vue
frontend/public/samples/: inventory_sample.xlsx  retail_monthly_ops.xlsx
frontend/stores/: job.ts
frontend/types/: api.ts
frontend/utils/: dateTime.ts
frontend/views/: chat.py  home.py  spec.py
frontend_streamlit/: _sidebar.py  api_client.py  app.py
frontend_streamlit/views/: chat.py  home.py  spec.py
scripts/: check_drift.py  inject_vba.ps1  local_stack.sh  make_sample.py  tally_demand_survey.py
scripts/vba/: Module1_MonthlyUpdate.bas  Module2_Helpers.bas  Sheet_Settings.cls  ThisWorkbook.cls
spikes/com_probe/: README.md  probe.py
spikes/xlsx_diff_noise/: README.md  probe.py
tests/: conftest.py
tests/backend/: conftest.py  test_annotators.py  test_cells_routes.py  test_chat_history_trim.py  test_chat_system_prompt.py  test_chat_tools.py  test_concurrency.py  test_diagrams_route.py  test_diff_route.py  test_external_functions_route.py  test_feedback_route.py  test_llm_client.py  test_llm_tools.py  test_logging_config.py  test_refactor_route.py  test_routes.py  test_storage.py  test_vba_change_route.py  test_workbook_route.py
tests/core/: test_cells.py  test_change_record.py  test_change_request.py  test_diagnosis.py  test_diagrams.py  test_external_functions.py  test_formula_fix.py  test_models.py  test_mutation.py  test_named_range_fix.py  test_officecli_provider.py  test_openpyxl_utils.py  test_reference_index.py  test_risk_analyzer.py  test_spec_generator.py  test_vba.py  test_vba_change.py  test_vba_package.py  test_verification.py  test_workbook.py  test_workbook_diff.py
tests/fixtures/: another_module.bas  simple_macro.bas
tests/frontend/: test_api_client.py
tests/frontend_streamlit/: test_api_client.py
