[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-spec-tool"
version = "0.1.0"
description = "Excel改修支援ツール: VBA/数式/参照関係を含む統合設計書を生成し、改修対話を支援する"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Shun" }]

dependencies = [
    "oletools>=0.60",
    "openpyxl>=3.1",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "streamlit>=1.32",
    "openai>=2.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.setuptools]
packages = ["core", "core.extractors", "backend", "backend.routes", "frontend"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# FastAPI の Depends() / File() を引数デフォルトに置く規約は B008 と衝突するが
# 公式ドキュメント推奨パターンなので routes 配下のみ B008 を許可する
"backend/routes/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["core"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["oletools.*", "openpyxl.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
filterwarnings = [
    # oletools (olevba) の依存 pyparsing が古いAPIを使っており騒がしい. 我々の責任ではないので抑止.
    "ignore::DeprecationWarning:pyparsing.*",
    "ignore::DeprecationWarning:oletools.*",
    "ignore:.*PyparsingDeprecationWarning.*",
    "ignore::pyparsing.exceptions.PyparsingDeprecationWarning",
]
