[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlblueprint"
version = "0.1.0"
description = "Generate a structured spec, dependency graph and LLM-assisted refactor chat for legacy .xlsm/.xlsx workbooks (VBA, formulas, references)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Shunsuke Tamura", email = "shunsuke.tamura06@gmail.com" }]
keywords = ["excel", "xlsm", "vba", "openpyxl", "fastapi", "nuxt", "llm", "legacy-modernization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

dependencies = [
    "oletools>=0.60",
    "openpyxl>=3.1",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "openai>=2.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.setuptools]
packages = ["core", "core.extractors", "backend", "backend.routes"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# FastAPI の Depends() / File() を引数デフォルトに置く規約は B008 と衝突するが
# 公式ドキュメント推奨パターンなので routes 配下のみ B008 を許可する
"backend/routes/*.py" = ["B008"]
# scripts/ はサンプル生成スクリプトで、長い Excel 数式や日本語コメントが
# 行に多く乗るため line-length を緩める. ロジックではないので可読性優先.
"scripts/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["core"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["oletools.*", "openpyxl.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
filterwarnings = [
    # oletools (olevba) の依存 pyparsing が古いAPIを使っており騒がしい. 我々の責任ではないので抑止.
    "ignore::DeprecationWarning:pyparsing.*",
    "ignore::DeprecationWarning:oletools.*",
    "ignore:.*PyparsingDeprecationWarning.*",
    "ignore::pyparsing.exceptions.PyparsingDeprecationWarning",
]
